<?xml version="1.0" encoding="UTF-8"?>
<!--
Copyright (c) 2025 PANTHEON.tech, s.r.o. and others.  All rights reserved.

This program and the accompanying materials are made available under the
terms of the Eclipse Public License v1.0 which accompanies this distribution,
and is available at http://www.eclipse.org/legal/epl-v10.html
-->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>io.lighty.core</groupId>
        <artifactId>lighty-app-parent</artifactId>
        <version>23.0.0</version>
        <relativePath>../../lighty-core/lighty-app-parent/pom.xml</relativePath>
    </parent>

    <groupId>io.lighty.kit.examples.controllers</groupId>
    <artifactId>lighty-community-netty-restconf-app</artifactId>
    <packaging>jar</packaging>

    <name>${project.groupId}:${project.artifactId}</name>
    <url>https://github.com/PANTHEONtech/lighty</url>

    <properties>
        <application.main.class>io.lighty.controllers.nettyrestconfapp.Main</application.main.class>
        <application.attach.zip>true</application.attach.zip>

        <maven.deploy.skip>true</maven.deploy.skip>
        <maven.compiler.source>21</maven.compiler.source>
        <maven.compiler.target>21</maven.compiler.target>
    </properties>
    <dependencies>
        <dependency>
            <groupId>io.lighty.modules</groupId>
            <artifactId>lighty-restconf-netty-nb-community</artifactId>
            <version>23.0.0</version>
            <scope>compile</scope>
        </dependency>
        <dependency>
            <groupId>io.lighty.applications</groupId>
            <artifactId>lighty-app-modules-config</artifactId>
        </dependency>
        <dependency>
            <groupId>io.lighty.modules</groupId>
            <artifactId>lighty-netconf-sb</artifactId>
        </dependency>
        <dependency>
            <groupId>com.github.spotbugs</groupId>
            <artifactId>spotbugs-annotations</artifactId>
        </dependency>
    </dependencies>

</project>